# authtool

./: CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: release.yml
src/: lib.rs  manual_identity.rs  shared_key.rs
