[package]
authors = ["Ditto Engineering Team <engineering@ditto.live>"]
description = "Generate authentication for devices in a Ditto mesh."
documentation = "https://docs.ditto.live/"
edition = "2021"
homepage = "https://www.ditto.live"
license = "Apache-2.0"
name = "ditto-authtool"
resolver = "2"
version = "0.1.0"

[[bin]]
name = "ditto-authtool"
path = "src/bin/cli.rs"

[dependencies]
base64 = "0.13.0"
ring = "0.16.20"
thiserror = "1.0.31"

# cli
anyhow = "1.0.69"
chrono = { version = "0.4.23", features = ["serde"] }
clap = { version = "3.1.15", features = ["cargo"] }
pem = "1.1.1"
serde = { version = "1.0.152", features = ["derive"] }
serde_bytes = "0.11.9"
serde_cbor = "0.11.2"
serde_json = "1.0.93"

[dev-dependencies]
rcgen = "0.9.2"
